# zero-os

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
docs/: architecture.md
kernel/: Cargo.toml  build.rs  layout.ld
kernel/src/: lib.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/arm/: boot.rs  cache.rs  exceptions.rs  gic.rs  mmu.rs  mod.rs
kernel/src/drivers/: mod.rs  uart.rs
kernel/src/grants/: allocator.rs  mod.rs
kernel/src/macros/: mod.rs
kernel/src/memory/: allocator.rs  mod.rs  virtual_memory.rs
kernel/src/platform/: mod.rs  qemu.rs
kernel/src/process/: mod.rs
kernel/src/safety/: mod.rs
kernel/src/syscalls/: mod.rs
